Add source links to last slide

--- a/index.html
+++ b/index.html
@@ -194,6 +194,10 @@
 
       # Questions?
 
+      * Slides: [scizzorz.github.io/mask-presentation](https://scizzorz.github.io/mask-presentation)
+      * Source code: [github.com/scizzorz/mask-presentation](https://github.com/scizzorz/mask-presentation)
+      * Mask source code not open source... yet!
+
     </textarea>
     <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
     </script>
