Add development slide

--- a/index.html
+++ b/index.html
@@ -314,6 +314,20 @@
 
       ---
 
+      # Development
+
+      * Inspired by a [blog post](https://eev.ee/blog/2015/02/28/sylph-the-programming-language-i-want/)
+      * Started in March 2015 with a friend
+        * Haskell compiler to convert Mask into C code
+      * Abandoned until November 2015
+        * Python compiler to convert Mask into LLVM IR
+      * Collaborating through a shared GitHub repository
+      * Tested automatically using Travis CI
+
+      ![Contribution graph](graph.png)
+
+      ---
+
       # Compiler
 
       * About 3000 lines of Python
@@ -368,8 +382,6 @@
       ---
 
       # Questions?
-
-      --
 
       * Background: [scizzorz.github.io/resume/background.html](https://scizzorz.github.io/resume/background.html)
       * Resume: [scizzorz.github.io/resume](https://scizzorz.github.io/resume)
