Quick hack to get graph up

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
       * Collaborating through a shared GitHub repository
       * Tested automatically using Travis CI
 
-      ![Contribution graph](graph.png)
+      ![Contribution graph](https://raw.githubusercontent.com/scizzorz/mask-presentation/gh-pages/graph.png)
 
       ---
 
