Add JavaScript hatred

--- a/index.html
+++ b/index.html
@@ -62,20 +62,27 @@
       if(5 &lt; x &lt; 10) { ... }
       ```
 
+      ```py
+      if stage == "F": stag = "EX"
+      elif stage == "EX": stage = "MEM"
+      ```
+
       ```php
-      TRUE == 1; // true
-      "TRUE" == TRUE; // true
-      "TRUE" == 1; // false?
+      TRUE == 1; // = true
+      "TRUE" == TRUE; // = true
+      "TRUE" == 1; // = false?
+      ```
+
+      ```js
+      [] + [] // = ""
+      [] + {} // = [object Object]
+      {} + [] // = 0
+      {} + {} // = NaN
       ```
 
       ```java
       BufferedReader br = new BufferedReader(new FileReader("file.txt"));
       while((line = br.readLine()) != null) { ... }
-      ```
-
-      ```py
-      if stage == "F": stag = "EX"
-      elif stage == "EX": stage = "MEM"
       ```
 
       ```rust
