--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
   <head>
     <title>Mask - John Weachock</title>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic|Roboto+Slab|Roboto+Mono" rel="stylesheet">
     <style>
-      @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed);
-      @import url(https://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic)
-      @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,700);
-      @import url(https://fonts.googleapis.com/css?family=Roboto+Mono);
-      @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro);
-
       body {
         font-family: 'Roboto';
       }
